@@ -1,3 +1,12 @@
+2001-02-05  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/html-utilities.scm: Added sorting of accounts according
+	to their account-code. Added calculation of a total sum.
+
+	* src/scm/report-utilities.scm: Improved calculation of the
+	exchange rates such more complicated currency configurations can
+	be handled.
+
 2001-02-03  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/html-utilities.scm: add account table generating
